# jaka_ros

./: README.md
jaka_control/: CMakeLists.txt  package.xml
jaka_control/include/jaka_control/: cubicSpline.h
jaka_control/src/: cubicSpline.cpp  jaka_control.cpp  robot_move.cpp
jaka_controller_tcp_ros/: CMakeLists.txt  README.md
jaka_controller_tcp_ros/include/: robot_client_tcp.h
jaka_controller_tcp_ros/launch/: jaka_bringup.launch  jaka_moveit_bringup.launch
jaka_controller_tcp_ros/src/: jaka_Shutdown.cpp  jaka_ros_node.cpp  jaka_state_pub_node.cpp
jaka_controller_tcp_ros/src/libs/: robot_client_tcp.cpp
jaka_description/: CMakeLists.txt  package.xml
jaka_description/launch/: display.launch  gazebo.launch  jaka_ur_gazebo_control.launch  jaka_ur_gazebo_joint_states.launch  jaka_ur_moveit_gazebo_joint_states.launch  rviz_display.launch
jaka_description/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
jaka_description/urdf/: hand.xacro  jaka.rviz  jaka.urdf  jaka.urdf.xacro  jakaUr.gv  jaka_description.csv  jaka_description.fake  jaka_description.urdf  jaka_hand.urdf.xacro  有汉字注释-jaka.urdf.xacro
jaka_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
jaka_moveit_config/config/: controllers.yaml  jakaUr.srdf  jaka_description.srdf  ompl_planning.yaml  ros_controllers.yaml
jaka_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  demo_move.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  jakaUr_moveit_controller_manager.launch.xml  jaka_description_moveit_controller_manager.launch.xml  jaka_moveit_planning_execution.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
moveit_client/: CMakeLists.txt  package.xml
moveit_client/action/: plan.action
moveit_client/include/: planner.h  test_movit.h
moveit_client/launch/: test.launch  trajectory_controller.launch
moveit_client/src/: planner.cpp  robot_action.cpp  test_movit.cpp
moveit_client/srv/: plan_and_move.srv
universal_msgs/: CMakeLists.txt  README.md  package.xml
universal_msgs/msg/: Command.msg  RobotMsg.msg
universal_msgs/srv/: DetectionTask.srv
